--- a/form/style.scss
+++ b/form/style.scss
@@ -5,7 +5,7 @@ $background-color: rgb(255, 255, 255);
 $border-color: rgb(230, 236, 240);
 $text-color: rgb(20, 23, 26);
 $twitter-color: rgba(29, 161, 242, 1.00);
-$info-color: rgb(128, 128, 128, 1);
+$info-color: rgba(128, 128, 128, 1);
 $href-color: rgb(15, 121, 254);
 $gray-color: rgb(204, 214, 221);
 $poll-top-color: rgb(113, 201, 248);
