--- a/form/style.scss
+++ b/form/style.scss
@@ -49,7 +49,7 @@ article.main {
         display: table-cell;
         padding: 0 15px;
         & > header {
-            height: 49px;
+            height: auto;
             width: 100%;
             margin: 10px 0 15px 0;
             & > a {
@@ -91,11 +91,6 @@ article.main {
                                     fill: currentcolor;
                                 }
                             }
-                            & > .logo {
-                                display: block;
-                                float: right;
-                                margin: 15px 0px 0px auto;
-                            }
                         }
                         & > .username {
                             font-size: 14px;
@@ -104,6 +99,11 @@ article.main {
                             line-height: 19.3px;
                         }
                     }
+                }
+                & > .logo {
+                    display: block;
+                    float: right;
+                    margin-top: 2px;
                 }
             }
         }
